changed layout, added search element, fixes...
Fixed the calculated height of the canvas container.
It finally shows the whole scrollbar,
in order to achieve that we manually
run onResize() on page load.
Added the html input element for search,
it is barely configured yet though.
Lastly changed the layout to the same one used by the previous application,
to that effect the scrollbars for the window are hidden,
since both sides of the page are scrollable themselves.

--- a/index.css
+++ b/index.css
@@ -5,6 +5,11 @@
     font-size: 14px;
 }
 
+body {
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 td {
     text-align: center;
     vertical-align: baseline;
@@ -60,7 +65,8 @@ table, td, th {
 
 #canvas-container {
     width: 1000px;
-    overflow-y: auto;
+    overflow-y: scroll;
+    overflow-x: hidden;
     border:1px solid #000000;
     position: relative;
     display: inline-block;
@@ -108,7 +114,8 @@ canvas {
 #detailview-container {
     width: 100%;
     min-width: 450px;
-    border:1px solid #000000;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 #weapon-render {
@@ -117,6 +124,11 @@ canvas {
 
 #header-container {
     display: flex;
+}
+
+#toolbar-container {
+    display: flex;
+    direction: column;
 }
 
 #content {
@@ -170,4 +182,15 @@ canvas {
 
 .purple {
     background-color: #885aec;
+}
+
+.search {
+    border-right-width: 0px;
+    border-top-width: 0px;
+    border-bottom-width: 0px;
+    border-left-width: 0px;
+    box-shadow: none;
+    border: 1px solid #000000;
+    outline: none;
+    height: 28px;
 }
